# epftoolbox2

./: .gitignore  README.md  example.py  example_dataset.csv  example_results.xlsx  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/data/: DataPipeline.py
src/data/sources/: BaseSource.py  CalendarSource.py  CsvSource.py  EntsoeSource.py  OpenMeteoSource.py
src/data/transformations/: BaseTransformation.py  CalendarTransformation.py  InterpolationTransformation.py  LagTransformation.py  TimeZoneTransformation.py
src/evaluators/: BaseEvaluator.py  CoefsEvaluator.py  EvaluatorPipeline.py  MaeEvaluator.py
src/models/: BaseModel.py  LassoModel.py  MLPModel.py  ModelWorker.py  NaiveModel.py  OLSModel.py  WLSModel.py
src/scalers/: NoScaler.py  StandardScaler.py
test/data/: test_DataPipeline.py
tests/data/: test_DataPipeline.py
tests/data/sources/: test_BaseSource.py  test_CsvSource.py  test_EntsoeSource.py  test_OpenMeteoSource.py
tests/data/transformations/: test_BaseTransformation.py  test_CalendarTransformation.py
tests/files/: test_data.csv
